changed background color to white

--- a/src/webparts/oneDriveForm/components/OneDriveForm.module.scss
+++ b/src/webparts/oneDriveForm/components/OneDriveForm.module.scss
@@ -5,12 +5,13 @@
     max-width: 700px;
     margin: 0px auto;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    
   }
 
   .row {
     @include ms-Grid-row;
     @include ms-fontColor-white;
-    background-color: $ms-color-themeDark;
+    background-color: white;
     padding: 20px;
     min-height: 320px;
   }
@@ -25,17 +26,20 @@
 
   .title {
     @include ms-font-xl;
-    @include ms-fontColor-white;
+    //@include ms-fontColor-white;
+    color: $ms-color-themePrimary;
   }
 
   .subTitle {
     @include ms-font-l;
-    @include ms-fontColor-white;
+    //@include ms-fontColor-white;
+    color: $ms-color-themePrimary;
   }
 
   .description {
     @include ms-font-l;
-    @include ms-fontColor-white;
+    //@include ms-fontColor-white;
+    color: $ms-color-themePrimary;
   }
 
   .button {
